# data_collection_kinect

./: CMakeLists.txt  README.md  formula.md  plot_all_rpm_pixel.py  plot_rpm_record_pixel.py
config/: example_config.yaml  kinect_config.yaml
include/: camera_interface.hpp  common.hpp  detect.hpp  kinect_camera_adapter.hpp  safe_queue.hpp  solver.hpp  utils.hpp
src/: basketball_detect.cpp  camera_factory.cpp  kinect_camera_adapter.cpp  main.cpp  solver.cpp  solver_camera.cpp  test_camera.cpp  utils.cpp
